Styling the links

--- a/packages/index.html
+++ b/packages/index.html
@@ -31,6 +31,32 @@
         </nav>
     </header>
     <main>
+        <section class="package">
+            <a href="#">
+                <h1 class="plan__header">Our PLUS Plan</h1>
+                <h2 class="plan__subheader">The most popular choice of our customers.</h2>
+                <p class="plan__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, excepturi corporis sapiente reprehenderit
+                    aut nisi aliquam necessitatibus harum modi vitae? Repellat cupiditate at quasi doloremque aspernatur
+                    omnis sequi provident sint.</p>
+            </a>
+        </section>
+        <section class="package">
+            <a href="#">
+                <h1 class="plan__header">Our FREE Plan</h1>
+                <h2 class="plan__subheader">An extremly solid start into our hosting world.</h2>
+                <p class="plan__description">Get started immeadiately at zero cost!</p>
+            </a>
+        </section>
+        <section class="package">
+            <a href="#">
+                <h1 class="plan__header">Our PREMIUM Plan</h1>
+                <h2 class="plan__subheader">All your enterprise needs. Instant support, guaranteed uptime.</h2>
+                <p class="plan__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error blanditiis fugiat veritatis corrupti, perspiciatis,
+                    officiis, eum eaque libero sunt asperiores quos eius vel mollitia dolore dolorem omnis? Voluptas, similique
+                    optio.
+                </p>
+            </a>
+        </section>
 
     </main>
     <footer class="main-footer">
