--- a/packages/index.html
+++ b/packages/index.html
@@ -35,6 +35,7 @@
         <section class="package" id="plus">
             <a href="#">
                 <h1 class="package__title">Our PLUS Plan</h1>
+                <h2 class="package__badge">RECOMMENDED</h2>
                 <h2 class="package__subtitle">The most popular choice of our customers.</h2>
                 <p class="package__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, excepturi corporis sapiente reprehenderit
                     aut nisi aliquam necessitatibus harum modi vitae? Repellat cupiditate at quasi doloremque aspernatur
